--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_activityList_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_default="wrap"
+        app:layout_constraintHeight_max="300dp"
         android:layout_margin="16dp"
         android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/text"
-        app:layout_constraintHeight_max="400dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/text" />
 
     <ImageView
         android:id="@+id/img_add_main"
