--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_activityList_main"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constrainedHeight="true"
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintHeight_max="300dp"
         android:layout_margin="16dp"
@@ -56,5 +57,17 @@
         app:layout_constraintTop_toBottomOf="@id/rv_activityList_main"
         app:layout_constraintStart_toEndOf="@id/edit_list_main"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="START"
+        android:textColor="#ffffff"
+        android:background="#91D0D2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_list_main"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
