--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,59 +18,94 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_activityList_main"
+        android:id="@+id/rv_itemList_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constrainedHeight="true"
         app:layout_constraintHeight_default="wrap"
-        app:layout_constraintHeight_max="300dp"
+        app:layout_constraintHeight_max="250dp"
         android:layout_margin="16dp"
         android:scrollbars="vertical"
         app:layout_constraintTop_toBottomOf="@+id/text" />
-
-    <Button
-        android:id="@+id/btn_add_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="ADD"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/edit_list_main"
-        app:layout_constraintTop_toBottomOf="@id/rv_activityList_main" />
 
     <EditText
         android:id="@+id/edit_list_main"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="20dp"
         android:hint="할 일"
         app:layout_constraintEnd_toStartOf="@id/btn_add_main"
         app:layout_constraintStart_toEndOf="@id/img_add_main"
-        app:layout_constraintTop_toBottomOf="@id/rv_activityList_main" />
+        app:layout_constraintTop_toBottomOf="@id/rv_itemList_main" />
 
     <ImageView
         android:id="@+id/img_add_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
         android:src="@drawable/ic_add_circle_mint_24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_activityList_main" />
+        app:layout_constraintTop_toBottomOf="@+id/rv_itemList_main" />
 
     <Button
-        android:id="@+id/imageButton"
+        android:id="@+id/btn_add_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#91D0D2"
+        android:layout_marginTop="20dp"
+        android:text="ADD"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/edit_list_main"
+        app:layout_constraintTop_toBottomOf="@id/rv_itemList_main" />
+
+    <EditText
+        android:id="@+id/edit_hour_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00"
+        android:textSize="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.423"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.722"
+        android:background="@android:color/transparent"/>
+
+    <EditText
+        android:id="@+id/edit_min_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00"
+        android:textSize="40dp"
+        app:layout_constraintStart_toEndOf="@id/tv_main"
+        app:layout_constraintTop_toTopOf="@+id/tv_main"
+        android:background="@android:color/transparent"/>
+
+    <TextView
+        android:id="@+id/tv_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=":"
+        android:textSize="40dp"
+        app:layout_constraintStart_toEndOf="@+id/edit_hour_main"
+        app:layout_constraintTop_toTopOf="@+id/edit_hour_main" />
+
+    <ToggleButton
+        android:id="@+id/btn_start_main"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_state"
         android:text="START"
         android:textColor="#ffffff"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_list_main" />
-
+        app:layout_constraintTop_toBottomOf="@+id/edit_hour_main"
+        app:layout_constraintVertical_bias="0.245" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
