lock activity timer

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,13 +18,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btn_drag_list" />
 
-    <EditText
-        android:id="@+id/edit_text_list"
+    <TextView
+        android:id="@+id/tv_text_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:background="@android:color/transparent"
         android:text="에디트 텍스트임!!!!!!"
         app:layout_constraintBaseline_toBaselineOf="@+id/rBtn_check_list"
         app:layout_constraintStart_toEndOf="@+id/rBtn_check_list" />
@@ -40,6 +39,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/rBtn_check_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/edit_text_list" />
+        app:layout_constraintStart_toEndOf="@+id/tv_text_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
