--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_margin="16dp"
         android:text="오늘의 활동 선택"
         android:textSize="20dp"
+        android:textColor="#000000"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,6 +36,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
         android:hint="할 일"
+        android:text=""
         app:layout_constraintEnd_toStartOf="@id/btn_add_main"
         app:layout_constraintStart_toEndOf="@id/img_add_main"
         app:layout_constraintTop_toBottomOf="@id/rv_itemList_main" />
@@ -56,6 +58,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="ADD"
+        android:textColor="#ffffff"
+        android:fontFamily="@font/jalnan"
+        android:background="@drawable/button_state"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/edit_list_main"
         app:layout_constraintTop_toBottomOf="@id/rv_itemList_main" />
@@ -66,6 +71,8 @@
         android:layout_height="wrap_content"
         android:text="00"
         android:textSize="40dp"
+        android:textColor="#4A4747"
+        android:fontFamily="@font/jalnan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.423"
@@ -80,6 +87,8 @@
         android:layout_height="wrap_content"
         android:text="00"
         android:textSize="40dp"
+        android:textColor="#4A4747"
+        android:fontFamily="@font/jalnan"
         app:layout_constraintStart_toEndOf="@id/tv_main"
         app:layout_constraintTop_toTopOf="@+id/tv_main"
         android:background="@android:color/transparent"/>
@@ -90,10 +99,12 @@
         android:layout_height="wrap_content"
         android:text=":"
         android:textSize="40dp"
+        android:textColor="#4A4747"
+        android:fontFamily="@font/jalnan"
         app:layout_constraintStart_toEndOf="@+id/edit_hour_main"
         app:layout_constraintTop_toTopOf="@+id/edit_hour_main" />
 
-    <ToggleButton
+    <Button
         android:id="@+id/btn_start_main"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -101,11 +112,25 @@
         android:text="START"
         android:textColor="#ffffff"
         android:textSize="20dp"
+        android:fontFamily="@font/jalnan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_hour_main"
         app:layout_constraintVertical_bias="0.245" />
+
+    <Button
+        android:id="@+id/btn_graph_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_state"
+        android:fontFamily="@font/jalnan"
+        android:text="통계보기"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_start_main"
+        app:layout_constraintVertical_bias="0.2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
