--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,17 +69,17 @@
         android:id="@+id/edit_hour_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00"
-        android:textSize="40dp"
-        android:textColor="#4A4747"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/jalnan"
+        android:text="00"
+        android:textColor="#4A4747"
+        android:textSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.423"
+        app:layout_constraintHorizontal_bias="0.422"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.722"
-        android:background="@android:color/transparent"/>
+        app:layout_constraintVertical_bias="0.672" />
 
     <EditText
         android:id="@+id/edit_min_main"
@@ -109,28 +109,29 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/button_state"
+        android:fontFamily="@font/jalnan"
         android:text="START"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:fontFamily="@font/jalnan"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_hour_main"
-        app:layout_constraintVertical_bias="0.245" />
+        app:layout_constraintVertical_bias="0.077" />
 
     <Button
-        android:id="@+id/btn_graph_main"
+        android:id="@+id/btn_chart_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_state"
         android:fontFamily="@font/jalnan"
         android:text="통계보기"
         android:textColor="#ffffff"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_start_main"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.542" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
