--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,22 +31,23 @@
 
     <EditText
         android:id="@+id/edit_list_main"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:layout_marginTop="20dp"
         android:hint="할 일"
         android:text=""
         app:layout_constraintEnd_toStartOf="@id/btn_add_main"
         app:layout_constraintStart_toEndOf="@id/img_add_main"
-        app:layout_constraintTop_toBottomOf="@id/rv_itemList_main" />
+        app:layout_constraintTop_toBottomOf="@id/rv_itemList_main"
+        app:layout_constraintWidth_percent="0.65" />
 
     <ImageView
         android:id="@+id/img_add_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="4dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/ic_add_circle_mint_24dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,10 +58,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@drawable/button_state"
+        android:fontFamily="@font/jalnan"
         android:text="ADD"
         android:textColor="#ffffff"
-        android:fontFamily="@font/jalnan"
-        android:background="@drawable/button_state"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/edit_list_main"
         app:layout_constraintTop_toBottomOf="@id/rv_itemList_main" />
